--- a/Code/Genres/genres.html
+++ b/Code/Genres/genres.html
@@ -5,12 +5,47 @@
     <head>
       <meta charset="utf-8">
       <title>Genres</title>
-      <link rel="stylesheet" href="stylesheet.css"/>
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <link href="css/bootstrap.min.css" rel="stylesheet">
+      <link rel="stylesheet" href="css/stylesheet.css"/>
+      <script src="js/jquery.js"></script>
+      <script src="js/bootstrap.min.js"></script>
       <script src="D3/d3.v3.min.js"></script>
     </head>
 
     <body>
-      <script src="main.js"></script>
+    <!-- Navigation -->
+    <nav role="navigation" class="navbar navbar-default navbar-fixed-top">
+        <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+            </div>
+            <!-- Collection of nav links and other content for toggling -->
+            <div id="navbarCollapse" class="collapse navbar-collapse">
+                <ul class="nav navbar-nav">
+                    <li><a href="../index.html">HOME</a></li>
+                    <li><a href="genres.html">GENRES</a></li>
+                    <li><a href="Artists-genre/artists-genre.html?genre=Disco">ARTISTS EXAMPLE PAGE</a></li>
+                </ul>              
+            </div>
+        </div>
+    </nav>
+
+    <div id="introtext">
+    <h1>SUMMARY</h1>
+    BOTH HOUSE AND TECHNO ARE DIVIDED IN A TOTAL OF 49 SUBGENRES, SORTED BY YEAR OF ORIGIN AND MUSICAL INTENSITY. MUSICAL INTENSITY IS BASED ON MULTIPLE FACTORS LIKE BPM, RHYTHM, INSTRUMENTS USED, PRESENCE OF VOCALS, ENERGY AND PITCH. THESE ATTRIBUTES ARE COLLECTED BY THE ECHO NEST API. FOR EARCH OF THE SPECIFIED SUB-GENRES, A FIXED AMOUNT OF SONGS WITH A TOP RATING IS USED TO DETERMINE THE INTENSITY COEFFICIENT. 
+    <br><br>
+    HOVERING OVER A SUB-GENRE HIGHLIGHTS THE NAME IN THE RIGHT TOP CORNER AND SELECTING A SUB-GENRE HIGHLIGHTS RELATED GENRES. DOUBLE CLICKING A SUB-GENRE LEADS TO THE ARTISTS PAGE IN WHICH ARTIST INFORMATION ABOUT THE SPECIFIED SUB-GENRE CAN BE FOUND.
+    </div>
+
+    <script src="js/main.js"></script>
+
     </body>
 
   </html>
