--- a/Code/index.html
+++ b/Code/index.html
@@ -1,69 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-  
-  <head>
-      <meta charset="utf-8">
-      <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-      <title>Home</title>
-      <link hreft="css/stylesheet.scc" rel="stylesheet">
-      <link href="css/bootstrap.min.css" rel="stylesheet">
-  </head>
 
-  <body>
-      
-      <iframe src="https://embed.spotify.com/?uri=spotify%3Atrack%3A4th1RQAelzqgY7wL53UGQt" width="300" height="380" frameborder="0" allowtransparency="true"></iframe>
-      <nav class="navbar navbar-default">
+    <head>
+
+        <meta charset="utf-8">
+        <title>Project Daan Ensing</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="css/bootstrap.min.css" rel="stylesheet">
+        <link href="css/stylesheet.css" rel="stylesheet">
+        <script src="js/jquery.js"></script>
+        <script src="js/bootstrap.min.js"></script>
+        <script src="js/bootstrap.min.js"></script>
+        <script src="D3/d3.v3.min.js"></script>
+    </head>
+
+<body>
+    <!-- Navigation -->
+    <nav role="navigation" class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
-          <!-- Brand and toggle get grouped for better mobile display -->
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">Final Project - Daan Ensing</a>
-          </div>
-
-          <!-- Collect the nav links, forms, and other content for toggling -->
-          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
-              <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-              <li><a href="#">Link</a></li>
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
-                <ul class="dropdown-menu" role="menu">
-                  <li><a href="#">Action</a></li>
-                  <li><a href="#">Another action</a></li>
-                  <li><a href="#">Something else here</a></li>
-                  <li class="divider"></li>
-                  <li><a href="#">Separated link</a></li>
-                  <li class="divider"></li>
-                  <li><a href="#">One more separated link</a></li>
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+            </div>
+            <!-- Collection of nav links and other content for toggling -->
+            <div id="navbarCollapse" class="collapse navbar-collapse">
+                <ul class="nav navbar-nav">
+                    <li><a href="index.html">HOME</a></li>
+                    <li><a href="Genres/genres.html">GENRES</a></li>
+                    <li><a href="Genres/Artists-genre/artists-genre.html?genre=Disco">ARTISTS EXAMPLE PAGE</a></li>
                 </ul>
-              </li>
-            </ul>
+            </div>
+        </div>
+    </nav>
 
-            <ul class="nav navbar-nav navbar-right">
-              <li><a href="#">Link</a></li>
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
-                <ul class="dropdown-menu" role="menu">
-                  <li><a href="#">Action</a></li>
-                  <li><a href="#">Another action</a></li>
-                  <li><a href="#">Something else here</a></li>
-                  <li class="divider"></li>
-                  <li><a href="#">Separated link</a></li>
-                </ul>
-              </li>
-            </ul>
-          </div><!-- /.navbar-collapse -->
-        </div><!-- /.container-fluid -->
-      </nav>
+    <!-- Page Content -->
+    <div class="container">
+        <div class="row">
+            <img class="vinyl" src="img/1.jpg" width="230" height="230"><img>
+            <img class="vinyl" src="img/2.jpg" width="230" height="230"><img>          
+            <img class="vinyl" src="img/3.jpg" width="230" height="230"><img>                
+            <img class="vinyl" src="img/4.jpg" width="230" height="230"><img>                
+            <img class="vinyl" src="img/5.jpg" width="230" height="230"><img>                
+        </div>
+        <div class="row">
+            <div class="col-lg-4 text-left">
+                <h1 id="headertext">INTRODUCTION</h1>
+                <p id="text">WHILE HOUSE AND TECHNO MUSIC ARE BECOMING MORE POPULAR, THE DIFFERENTIATION BETWEEN SUB-GENRES OF THESE ELECTRONICAL MUSIC GENRES AND THE ORIGIN OF THESE MUSICAL GENRES BECOMES MORE AND MORE VAGUE. THIS PROJECTS OFFERS AN INSIGHT IN DIFFERENT SUB-GENRES OF THESE MUSICAL GENRES. BESIDES SERVING AS A TOOL TO DISCOVER ALL GENRES, ONE CAN DISCOVER ARTISTS AND MUSIC CORRESPONDING TO THESE GENRES.</p>
+            </div>
+            <div class="col-lg-4 text-centre">
+                <h1 id="headertext">ADDITIONAL INFO</h1>                
+                <p id="text">THE MAIN VISUALIZATION CONSISTS OF A SCATTERPLOT IN WHICH 49 SUB-GENRES OF BOTH HOUSE AND TECHNO MUSIC ARE BEING SHOWED BY MEANS OF A SCATTERPLOT. FOR ANY SUB-GENRE, AN OVERVIEW OF TOP ARTISTS AND RELATED ARTISTS CAN BE FOUND BY CLICKING THE SUB-GENRE. SUBSEQUENTLY, A NEW VISUALISATION IS SHOWN BASED ON THESE ARTISTS.</p>
+            </div>
+            <div class="col-lg-4 text-right">
+                <h1 id="headertext">RESOURCES</h1>                
+                <p id="text">FOR A START, DATA FOR THE MAIN VISUALISATION IS COLLECTED BY USE OF SEVERAL BOOKS AND ONLINE RESOURCES. SOME MIGHT ARGUE THAT SUB-GENRES ARE MISSING OR ON THE OTHER HAND BE OVERSTATED IN THIS VISUALIIZATION. THE ULTIMATE GOAL HOWEVER IS TO PROVIDE AN INSTRUMENT TO GAIN INSIGHT IN THESE MUSICAL CATEGORIES WHICH IS AS ACCURATE AS POSSIBLE. A COMPLETE OVERVIEW OF BOTH ONLINE RESOURCES AS LITERATURE USED FOR SETTING UP THE DATASET CAN BE FOUND <a href="references.html">HERE.</a></p>
+            </div>
+        </div>
+    </div>
 
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-      <script src="js/bootstrap.min.js"></script>
-  </body>
+</body>
 
 </html>
