Final update with some adjustments in structure to minimize the number of files and maps

--- a/Code/references.html
+++ b/Code/references.html
@@ -6,12 +6,8 @@
         <meta charset="utf-8">
         <title>References</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="css/bootstrap.min.css" rel="stylesheet">
-        <link href="css/stylesheet-references.css" rel="stylesheet">
-        <script src="js/jquery.js"></script>
-        <script src="js/bootstrap.min.js"></script>
-        <script src="js/bootstrap.min.js"></script>
-        <script src="D3/d3.v3.min.js"></script>
+        <link href="external css/bootstrap.min.css" rel="stylesheet">
+        <link href="external css/stylesheet-references.css" rel="stylesheet">
     </head>
 
 <body>
