--- a/Code/Genres/Artists-genre/artists-genre.html
+++ b/Code/Genres/Artists-genre/artists-genre.html
@@ -5,11 +5,11 @@
         <meta charset="utf-8">
         <title>Artists</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="css/bootstrap.min.css" rel="stylesheet">
-        <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-        <script type="text/javascript" src="js/get_key_with_callback.js"></script>
-        <script type="text/javascript" src="D3/d3.v3.min.js"></script>
-        <script type="text/javascript" src="js/arg-1.3.1.js"></script>
+        <link href="../../external css/bootstrap.min.css" rel="stylesheet">
+        <script type="text/javascript" src="../../external js/jquery.min.js"></script>
+        <script type="text/javascript" src="../../external js/get_key_with_callback.js"></script>
+        <script type="text/javascript" src="../../D3/d3.v3.min.js"></script>
+        <script type="text/javascript" src="../../external js/arg-1.3.1.js"></script>
       	<link rel="stylesheet" href="css/stylesheet.css"/>
     </head>
 
