--- a/Code/Genres/genres.html
+++ b/Code/Genres/genres.html
@@ -6,11 +6,11 @@
       <meta charset="utf-8">
       <title>Genres</title>
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <link href="css/bootstrap.min.css" rel="stylesheet">
+      <link href="../external css/bootstrap.min.css" rel="stylesheet">
       <link rel="stylesheet" href="css/stylesheet.css"/>
-      <script src="js/jquery.js"></script>
-      <script src="js/bootstrap.min.js"></script>
-      <script src="D3/d3.v3.min.js"></script>
+      <script src="../external js/jquery.js"></script>
+      <script src="../external js/bootstrap.min.js"></script>
+      <script src="../D3/d3.v3.min.js"></script>
     </head>
 
     <body>
